# mailinabox

./: AGENTS.md  README.md  pyproject.toml  security.md
conf/: dovecot-mailboxes.conf  nginx-alldomains.conf  nginx-primaryonly.conf  nginx-top.conf
management/: backup.py  cli.py  dns_update.py  mailconfig.py  smtp_relay.py  ssl_certificates.py  status_checks.py  web_update.py
management/templates/: mail-guide.html  sync-guide.html
setup/: duplicity.sh  functions.sh  mail-postfix.sh  management.sh  migrate.py  network-checks.sh  nextcloud.sh  preflight.sh  python.sh  questions.sh  start.sh  system.sh  web.sh  webmail.sh
setup/duplicity/: pyproject.toml
tests/: test_optional_services.py
tools/: editconf.py  owncloud-restore.sh  owncloud-unlockadmin.sh  smtp_relay_test
